--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -1061,6 +1061,15 @@
   publisher: AppViewX
 - name: aws-ebs-csi-driver
   versions:
+  - version: v1.55.0-eksbuild.2
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.55.0-eksbuild.1
     compatibilities:
     - '1.35'
@@ -3935,6 +3944,27 @@
   publisher: eks
 - name: cribl_cribledge
   versions:
+  - version: v4.16.1-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
+  - version: v4.16.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
   - version: v4.15.1-eksbuild.1
     compatibilities:
     - '1.34'
