--- a/static/compatibilities/kubescape-operator.yaml
+++ b/static/compatibilities/kubescape-operator.yaml
@@ -324,7 +324,23 @@ versions:
   kube: ['1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: "- **kubectl image update**: the chart updates `docker.io/bitnami/kubectl`\
+      \ tag **1.27.6 \u2192 1.30.3**. If you pin or override the kubectl image/tag\
+      \ in `values.yaml`, update your override accordingly.\n- **grype-offline-db\
+      \ image reference flexibility**: you can now specify the image **by tag or by\
+      \ digest** for `grype-offline-db`. If you previously used custom image overrides,\
+      \ you may optionally switch to digest pinning for supply-chain immutability.\n"
+    chart_updates: ['Node-agent bugfix: resource size limits are now enforced again
+        for application profiles and network neighbourhoods (fixes prior non-enforcement).',
+      Updated bundled `docker.io/bitnami/kubectl` image tag from 1.27.6 to 1.30.3.,
+      'Helm chart enhancement: allow specifying `grype-offline-db` image via tag or
+        digest.']
+    features: ['Ability to reference the `grype-offline-db` image by digest (or tag),
+        improving flexibility and enabling immutable image pinning.', (Behavioral
+        fix) Resource size limits for application profiles and network neighbourhoods
+        are enforced again due to node-agent fix.]
+    breaking_changes: []
   chart_version: 1.20.3
   images: ['quay.io/kubescape/kubescape:v3.0.15', 'quay.io/kubescape/kubevuln:v0.3.25',
     'quay.io/kubescape/node-agent:v0.2.109', 'quay.io/kubescape/operator:v0.2.20',
