--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -265,6 +265,17 @@
   publisher: eks
 - name: akuity_agent
   versions:
+  - version: v0.9.2-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
   - version: v0.9.1-eksbuild.1
     compatibilities:
     - '1.33'
@@ -3211,6 +3222,15 @@
   publisher: Catalogic Software
 - name: cert-manager
   versions:
+  - version: v1.19.3-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.19.2-eksbuild.1
     compatibilities:
     - '1.35'
@@ -3259,6 +3279,15 @@
     - '1.30'
     - '1.29'
     - '1.28'
+  - version: v1.18.5-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.18.4-eksbuild.1
     compatibilities:
     - '1.35'
@@ -4315,6 +4344,15 @@
   publisher: datree
 - name: dynatrace_dynatrace-operator
   versions:
+  - version: v1.8.0-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.7.2-eksbuild.1
     compatibilities:
     - '1.33'
@@ -7724,6 +7762,17 @@
   publisher: Spacelift Inc.
 - name: splunk_splunk-otel-collector-chart
   versions:
+  - version: v0.144.0-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
   - version: v0.142.0-eksbuild.1
     compatibilities:
     - '1.34'
